Fixed code alignment

--- a/dupe-finder-ui/src/app/app.component.css
+++ b/dupe-finder-ui/src/app/app.component.css
@@ -119,8 +119,8 @@
 }
 
 .form-check {
-    z-index: 1100; /* High enough to render above the thumbnail */
+    z-index: 900; /* High enough to render above the thumbnail */
     position: absolute;
     top: 5px; /* Adjust for proper alignment */
     left: 5px;
-  }
+}
